--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "covid-dashboard",
+  "name": "rsclone",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -41,9 +41,6 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
-    "chart.js": "2.9.4",
-    "mapbox-gl": "2.0.0",
-    "nprogress": "0.2.0",
     "regenerator-runtime": "0.13.7"
   }
 }
