--- a/package.json
+++ b/package.json
@@ -1,46 +1,38 @@
 {
   "name": "rsclone",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "webpack serve",
-    "lint": "eslint ./src --ext .js",
-    "lint:fix": "npm run lint -- --fix"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "eslintIgnore": [],
-  "devDependencies": {
-    "@babel/core": "7.12.7",
-    "@babel/plugin-proposal-class-properties": "7.12.1",
-    "@babel/preset-env": "7.12.7",
-    "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.1",
-    "clean-webpack-plugin": "3.0.0",
-    "copy-webpack-plugin": "6.3.2",
-    "css-loader": "5.0.1",
-    "empty-module": "0.0.2",
-    "eslint": "7.2.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.21.5",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "html-webpack-plugin": "4.5.0",
-    "mini-css-extract-plugin": "1.3.1",
-    "node-sass": "5.0.0",
-    "postcss-loader": "4.1.0",
-    "sass-loader": "10.1.0",
-    "style-loader": "2.0.0",
-    "webpack": "5.10.1",
-    "webpack-cli": "4.2.0",
-    "webpack-dev-server": "3.11.0"
-  },
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "regenerator-runtime": "0.13.7"
+    "@testing-library/jest-dom": "5.11.6",
+    "@testing-library/react": "11.2.2",
+    "@testing-library/user-event": "12.6.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-scripts": "4.0.1",
+    "web-vitals": "0.2.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
