feat: add help card conponent, add request for get card info

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
       "react-app/jest"
     ]
   },
+  "eslintIgnore": [
+    "HelpCardsDescription.json"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
