--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ion-phaser/react": "1.2.2",
     "@material-ui/core": "4.11.2",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.57",
@@ -11,6 +12,7 @@
     "@testing-library/user-event": "12.6.0",
     "classnames": "2.2.6",
     "fontsource-roboto": "4.0.0",
+    "phaser": "3.51.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
