--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "2.2.6",
     "fontsource-roboto": "4.0.0",
     "phaser": "3.51.0",
+    "phaser3-rex-plugins": "^1.1.38",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
