--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "@testing-library/react": "11.2.2",
     "@testing-library/user-event": "12.6.0",
     "classnames": "2.2.6",
+    "easystarjs": "0.4.4",
     "fontsource-roboto": "4.0.0",
     "phaser": "3.51.0",
-    "phaser3-rex-plugins": "^1.1.38",
+    "phaser3-rex-plugins": "1.1.38",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
