feat: add lasers via regular sprites

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "classnames": "2.2.6",
     "easystarjs": "0.4.4",
     "fontsource-roboto": "4.0.0",
+    "matter-js": "^0.16.0",
     "phaser": "3.51.0",
+    "phaser-raycaster": "^0.9.1",
     "phaser3-rex-plugins": "1.1.38",
     "react": "17.0.1",
     "react-dom": "17.0.1",
