--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ eslintcache
 # misc
 .DS_Store
 .env.local
+.env.development
 .env.development.local
 .env.test.local
 .env.production.local
@@ -24,6 +25,3 @@ eslintcache
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# google client id
-google-key.env
