--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rsclone",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@ion-phaser/react": "1.2.2",
     "@material-ui/core": "4.11.2",
